--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -2,19 +2,27 @@
 	<head>
 		<title>Umair Zaidi</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link href='https://fonts.googleapis.com/css?family=Roboto:400,100' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Raleway:400,300' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<!--
-        <ul>
-			<li><a class="active" href="#home">Home</a></li>
-			<li><a href="#news">News</a></li>
-			<li><a href="#contact">Contact</a></li>
-			<li><a href="#about">About</a></li>
-		</ul>
-        -->
-        <div class="boxcontainer">
-            <div class="box"></div>
+        <div class="topcenter">
+            <a class="about" href="#about">About</a>
         </div>
+        <a class="contact" href="#contact">Contact</a>
+        <a class="photos" href="#photos">Photos</a>
+        <div class="bottomcenter">
+            <a class="portfolio" href="#portfolio">Portfolio</a>
+        </div>
+        <div class="topbar bar"></div>
+        <div class="bottombar bar"></div>
+        <div class="leftbar bar"></div>
+        <div class="rightbar bar"></div>
+        <div class="positioning">
+            <h1 class="formatting1">Umair</h1>
+            <h1 class="formatting2">Zaidi</h1>
+            <h2 class="formatting3">Student</h2>
+        </div>
+        <!--<img class="rightcenter" src="images/umairZ2.png">-->
 	</body>
 </html>
