No idea what i did

--- a/Final_Project/about.html
+++ b/Final_Project/about.html
@@ -6,6 +6,17 @@
         <link href='https://fonts.googleapis.com/css?family=Raleway:400,300' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-        <h1 class="formatting">Umair Zaidi</h1>
+        <div class="topcenter">
+            <a class="about" href="index.html">Home</a>
+        </div>
+        <a class="contact" href="#contact">Contact</a>
+        <a class="photos" href="#photos">Photos</a>
+        <div class="bottomcenter">
+            <a class="portfolio" href="#portfolio">Portfolio</a>
+        </div>
+        <div class="topbar bar"></div>
+        <div class="bottombar bar"></div>
+        <div class="leftbar bar"></div>
+        <div class="rightbar bar"></div>
 	</body>
 </html>
