--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
         <div class="topcenter">
-            <a class="about" href="#about">About</a>
+            <a class="about" href="about.html">About</a>
         </div>
         <a class="contact" href="#contact">Contact</a>
         <a class="photos" href="#photos">Photos</a>
